<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cn.poem.solon</groupId>
        <artifactId>poem-admin</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <name>poem-solon-admin</name>
    <artifactId>poem-solon-admin</artifactId>
    <packaging>jar</packaging>

    <properties>
    </properties>

    <dependencies>
        <!--单元测试依赖-->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon-test-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- http容器 -->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon.boot.smarthttp</artifactId>
        </dependency>
        <!-- 内核 -->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon</artifactId>
        </dependency>
        <!--solon 依赖-->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon-lib</artifactId>
        </dependency>
        <!--solon api-->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon-api</artifactId>
        </dependency>
        <!--配置读取yml-->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon.config.yaml</artifactId>
        </dependency>
        <!--poem-system 系统模块-->
        <dependency>
            <groupId>cn.poem.solon</groupId>
            <artifactId>poem-system</artifactId>
        </dependency>
        <!--poem-auth 权限模块-->
        <dependency>
            <groupId>cn.poem.solon</groupId>
            <artifactId>poem-auth</artifactId>
        </dependency>

    </dependencies>
    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgument>-parameters</compilerArgument>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>0.2.0</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>com.mybatis-flex</groupId>
                            <artifactId>mybatis-flex-processor</artifactId>
                            <version>${mybatis-flex.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <!-- 配置打包插件（设置主类，并打包成胖包） -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <finalName>${project.artifactId}</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <!-- 此处，要改成自己的程序入口（即 main 函数类） -->
                        <manifest>
                            <mainClass>cn.poem.solon.admin.App</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>